# Docker

backend/: Dockerfile  compose.yml  pyproject.toml
backend/app/: main.py  settings.py
docker_todo_app/: compose.yml
docker_todo_app/app/: settings.py
fastapi-docker/: Dockerfile  compose.yml  pyproject.toml
oauth_2/: compose.yml
oauth_2/oauth/: Dockerfile  pyproject.toml
oauth_2/oauth/app/: main.py
